# x

./: .gitignore  README.md  ROOTFS.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/proterm/app/: ContainerActivity.kt  ContainerAdapter.kt  ContainerInfo.kt  MainActivity.kt
app/src/main/java/com/proterm/app/proot/: ProotBridge.kt  ProotManager.kt
app/src/main/java/com/proterm/app/terminal/: AnsiColors.kt  Cell.kt  TerminalEmulator.kt  TerminalSession.kt  Vt100Parser.kt
app/src/main/java/com/proterm/app/terminal/gl/: BitmapFont.kt  GLTerminalView.kt  TerminalRenderer.kt
app/src/main/jni/: CMakeLists.txt  proot_bridge.c
app/src/main/res/drawable/: bg_container.xml  bg_status_chip.xml  bg_status_chip_stopped.xml  ic_archive.xml  ic_container.xml  ic_file.xml  ic_play.xml
app/src/main/res/layout/: activity_container.xml  activity_main.xml  dialog_create_container.xml  item_container.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
scripts/: build_proot.sh  prepare_rootfs.sh
